--- a/arvore_decisao.ipynb
+++ b/arvore_decisao.ipynb
@@ -9517,13 +9517,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "X = dados.loc[:, ['ano_letivo__ano', 'ano_letivo__ano_matricula_periodo', 'cep', \n",
+    "X1 = X.loc[:, ['ano_letivo__ano', 'ano_letivo__ano_matricula_periodo', 'cep', \n",
     "       'data', 'descricao_area_residencial',\n",
     "       'descricao_companhia_domiciliar', 'descricao_encaminhamento',\n",
     "       'descricao_historico', 'descricao_historico_disciplina',\n",
@@ -9536,114 +9536,63 @@
     "       'nome_escola_ensino_fundamental', 'percentual_frequencia',\n",
     "       'pessoa_fisica__nascimento_data', 'pessoa_fisica__sexo', \n",
     "       'qnt_pc', 'qtd_pessoas_domicilio', 'renda_bruta_familiar', 'sigla']] \n",
-    "y = dados.classe"
+    "y = X.classe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         1\n",
-       "100002    1\n",
-       "100003    1\n",
-       "100007    1\n",
-       "100008    1\n",
-       "100021    1\n",
-       "100026    1\n",
-       "100034    1\n",
-       "100040    1\n",
-       "100045    1\n",
-       "100048    1\n",
-       "10005     1\n",
-       "100064    1\n",
-       "100071    1\n",
-       "100072    1\n",
-       "100077    1\n",
-       "100080    1\n",
-       "100095    0\n",
-       "100101    0\n",
-       "100108    1\n",
-       "100114    1\n",
-       "100119    1\n",
-       "100122    1\n",
-       "100137    1\n",
-       "100142    1\n",
-       "100153    1\n",
-       "100159    1\n",
-       "10016     1\n",
-       "100164    1\n",
-       "100167    1\n",
-       "         ..\n",
-       "99812     1\n",
-       "99817     1\n",
-       "99820     1\n",
-       "99834     1\n",
-       "99840     1\n",
-       "99845     1\n",
-       "99848     1\n",
-       "99863     1\n",
-       "99868     1\n",
-       "99877     1\n",
-       "99878     1\n",
-       "99889     1\n",
-       "99890     1\n",
-       "999       1\n",
-       "9990      1\n",
-       "99905     0\n",
-       "99910     0\n",
-       "99918     1\n",
-       "99919     1\n",
-       "99920     1\n",
-       "99921     1\n",
-       "99954     1\n",
-       "99955     1\n",
-       "99956     1\n",
-       "99957     1\n",
-       "9996      1\n",
-       "99974     1\n",
-       "99983     1\n",
-       "99988     1\n",
-       "99991     1\n",
-       "Name: classe, Length: 21713, dtype: int64"
+       "(6395, 26)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X\n",
-    "y"
+    "X1\n",
+    "y\n",
+    "X1.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X1_dummies = pd.get_dummies(X1, drop_first=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'CNAT'",
+     "ename": "MemoryError",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-188077a1bdea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtree_clf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDecisionTreeClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_depth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtree_clf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-92-ae2dbf0d6e5a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtree_clf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDecisionTreeClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_depth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtree_clf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX1_dummies\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/home/ubuntu/anaconda3/lib/python3.6/site-packages/sklearn/tree/tree.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[1;32m    737\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    738\u001b[0m             \u001b[0mcheck_input\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcheck_input\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 739\u001b[0;31m             X_idx_sorted=X_idx_sorted)\n\u001b[0m\u001b[1;32m    740\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    741\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/home/ubuntu/anaconda3/lib/python3.6/site-packages/sklearn/tree/tree.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[1;32m    120\u001b[0m         \u001b[0mrandom_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_random_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck_input\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 122\u001b[0;31m             \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"csc\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m             \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0missparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/home/ubuntu/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    380\u001b[0m                                       force_all_finite)\n\u001b[1;32m    381\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 382\u001b[0;31m         \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    383\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    384\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'CNAT'"
+      "\u001b[0;31mMemoryError\u001b[0m: "
      ]
     }
    ],
    "source": [
     "tree_clf = DecisionTreeClassifier(max_depth=2) \n",
-    "tree_clf.fit(X, y)\n"
+    "tree_clf.fit(X1_dummies, y)\n"
    ]
   },
   {
