EDA dos dados focando em notas

--- a/versao_2/modelo_supersionado.ipynb
+++ b/versao_2/modelo_supersionado.ipynb
@@ -294,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#transformando o dado em int\n",
@@ -2591,6 +2593,42 @@
     "plt.show()\n",
     "print(roc_auc_score(ytest_red, y_scores_tree_red))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#gera a arvore de decisao\n",
+    "export_graphviz(model_red,\n",
+    "                feature_names=dados_reduzido.columns,\n",
+    "                filled=True,\n",
+    "                rounded=True, \n",
+    "                out_file='tree_red.dot')\n",
+    "\n",
+    "os.system('dot -Tpng tree_red.dot -o tree_red.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
