comentando o arquivo preparando_base

--- a/versao_2/preparando_base.ipynb
+++ b/versao_2/preparando_base.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preparando base de dados\n",
+    "\n",
+    "A base de dados é composta por dados relacionados aos alunos do integrado de todos os campis geradas em janeiro de 2018. A base de dados gerada será utilizada nos arquivos \"modelo_supervisionado\" e \"modelo_supervisionado_COM_social\" como entrada para os algoritmos de aprendizado de máquina. A base também será usada no arquivo \"EDA\" para estudo exploratório dos dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -8,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "#import os pacotes utilizados\n",
+    "#importar os pacotes utilizados\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -24,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "#import os dataframe do IFRN\n",
+    "#importar os dados em formato json e transforma em dataframe do pandas\n",
     "df_AcompanhamentoEncaminhamento = pd.read_json('dados/AcompanhamentoEncaminhamento.json')\n",
     "df_Aluno = pd.read_json('dados/Aluno.json')\n",
     "df_BeneficioGovernoFederal = pd.read_json(\"dados/BeneficioGovernoFederal.json\")\n",
@@ -270,6 +279,7 @@
     }
    ],
    "source": [
+    "#imprime duas linhas de cada dataframe para exibir a organização dos dados\n",
     "print(\"df_AcompanhamentoEncaminhamento\")\n",
     "print(df_AcompanhamentoEncaminhamento.head(2))\n",
     "print(\"df_Aluno\")\n",
@@ -330,6 +340,18 @@
     "print(df_TipoServicoSaude.head(2))\n",
     "print(\"df_UnidadeOrganizacional\")\n",
     "print(df_UnidadeOrganizacional.head(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merge entre os arquivos json\n",
+    "\n",
+    "Realiza o merge dos dados (similiar ao join do sql), o qual, a partir de dois dataframes, é gerado um terceiro \n",
+    "com os atributos dos dois anteriores ligados por algum campo em comum. \n",
+    "\n",
+    "Inicialmente a base de alunos possuem 11311 instâncias com 10 atributos, mas ao final é criado uma base de 188544 instâncias e  42 atributos. O aumento substancial da quantidade de instâncias se deve ao fato da repetição de alguns dados, por exemplo, um aluno que cursa 5 disciplinas será repetido 5 vezes na base, sendo cada linha representada por cada disciplina e com os dados do aluno em comum a todas. "
    ]
   },
   {
@@ -581,14 +603,18 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "#df_Alunos shape: (11311, 10)\n",
     "print(df_Aluno.shape) \n",
     "\n",
-    "#relacionando aluno ao seu campus e sua situacao de matricula\n",
+    "#relacionando aluno ao seu campus\n",
     "dados = pd.merge(df_Aluno, df_CursoCampus, \n",
     "                 left_on=\"curso_campus_id\", right_on=\"id\", suffixes=[\"\", \"_curso_campus\"])\n",
     "dados = pd.merge(dados, df_UnidadeOrganizacional, \n",
     "                 left_on=\"diretoria__setor__uo_id\", right_on=\"id\", suffixes=[\"\", \"_unidade_organizacional\"])\n",
+    "\n",
+    "#relacionando o aluno com sua situacao de matricula\n",
     "dados = pd.merge(dados, df_SituacaoMatricula, \n",
     "                 left_on=\"situacao_id\", right_on=\"id\", suffixes=[\"\", \"_situacao_matricula\"])\n",
     "print(dados.shape)\n",
@@ -645,13 +671,13 @@
     "print(dados.shape)\n",
     "#print(dados.head(2))\n",
     "\n",
-    "#DADOS COM CARACTERIZACAO SOCIAL\n",
+    "#selecionando os campos no dataframe\n",
     "dados = dados[['id', 'ano_letivo__ano', 'cep', 'pessoa_fisica__nascimento_data', \n",
-    "               #'cidade__nome', 'cidade__estado__nome', \n",
+    "               #'cidade__nome', 'cidade__estado__nome', #INFORMACAO REDUNDANTE EM RELACAO AO CEP\n",
     "               'pessoa_fisica__sexo', 'descricao_historico', 'sigla',\n",
     "               'descricao', \n",
     "               'ano_letivo__ano_matricula_periodo', 'descricao_situacao_matricula_periodo',\n",
-    "               #'data', 'descricao_encaminhamento',\n",
+    "               #'data', 'descricao_encaminhamento', #FUTURAMENTE SERA UTILIZADO\n",
     "               'media_final', 'percentual_frequencia', \n",
     "               'descricao_historico_disciplina',\n",
     "               #'professores', #FUTURAMENTE SERA UTILIZADO\n",
@@ -706,7 +732,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Filtrando os dados por disciplina"
+    "# Filtrando os dados por disciplina\n",
+    "\n",
+    "foram selecionado apenas as notas de português e matemática, uma vez que estas estão presentes em todos os cursos técnico\n",
+    "do integrado espalhados por todas as unidades do RN"
    ]
   },
   {
@@ -4751,6 +4780,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simplificando a base de dados\n",
+    "\n",
+    "a partir da biblioteca msno é verificado de forma visual a qualidade dos dados. \n",
+    "quando estiver branco significa que o dado é NAN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -4775,7 +4814,6 @@
     }
    ],
    "source": [
-    "#exibindo consistencias dos dados\n",
     "import missingno as msno\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -7398,6 +7436,8 @@
     }
    ],
    "source": [
+    "#a partir da análise visual da qualidade de dados, estão sendo removido alguns campos que não agrega informação\n",
+    "\n",
     "dados_filtrado['qnt_pc'] = dados_filtrado.quantidade_computadores + dados_filtrado.quantidade_netbooks + dados_filtrado.quantidade_notebooks\n",
     "df1 = dados_filtrado.drop([#'cidade__estado__nome', \n",
     "                           #'cidade__nome', \n",
@@ -7465,7 +7505,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Definindo a classe de evasão"
+    "# Definindo a classe de evasão\n",
+    "\n",
+    "o objeto de estudo nesse trabalho é a análise de evasão. será apresentado uma sequência de tabulação de dados e, ao final, a criação da classe de aluno evadido (0) e não-evadido (1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "abaixo é apresentado a tabulação de dados em relação aos campus (linhas) x disciplinas (colunas). \n",
+    "É verificado que apenas as notas do 1º e 2º ano estão presentes de forma consistente em todos os campos. Portanto, apenas as notas do 1º e 2º ano serão levado em conta na base de dados final. "
    ]
   },
   {
@@ -8235,6 +8285,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abaixo é apresentado as médias e quantidade de instâncias por disciplina (linhas) x status do aluno (colunas) - cancelado, cancelamento compulsório, concluído, evasão, matriculado, matrícula vínculo institucional, trancado, trancado voluntariamente, transferido externo, transferido interno. É verificado quem alguns status do aluno possuí poucas ou nenhuma instância. \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -8505,6 +8563,13 @@
    "source": [
     "#visualizando a disciplina por status de matricula\n",
     "dados.groupby(['descricao_historico_disciplina', 'descricao'])['media_final'].aggregate([np.mean, np.size]).unstack()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abaixo é apresentado as médias e quantidade de instâncias por disciplina (linhas), status do aluno (linhas segundo nível) x Campis. É verificado quem alguns status do aluno possuí poucas ou nenhuma instância."
    ]
   },
   {
@@ -10321,6 +10386,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abaixo é apresentado a quantidade de instâncias por disciplina (linhas) x status do aluno (Cancelado, evasão, matriculado) x Campis (colunas). É verificado quem alguns status do aluno possuí poucas ou nenhuma instância."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -10812,6 +10884,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abaixo é apresentado a quantidade de instâncias por status do aluno (linhas), Campis (linhas segundo nível) x ano."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -11300,6 +11379,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Após análise dos dados tabulados foram agrupados os status para criação da classe de evadido (0) e não-evadido (1). Foram considerados da classe evadido as instâncias que tinham o status: evasão, cancelado, cancelamento compulsório. Foram considerados da classe não-evadido as instâncias que tinham o status: concluído, matriculado, matrícula vínculo institucional. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -11396,19 +11482,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transformando as notas em colunas"
+    "# Transformando as notas em colunas\n",
+    "\n",
+    "a fim de simplificar a base e remover dados duplicados, foram criados 4 colunas referentes as notas de português"
    ]
   },
   {
