analise de correspondencia

--- a/versao_2/preparando_base.ipynb
+++ b/versao_2/preparando_base.ipynb
@@ -11487,7 +11487,7 @@
    "source": [
     "# Transformando as notas em colunas\n",
     "\n",
-    "a fim de simplificar a base e remover dados duplicados, foram criados 4 colunas referentes as notas de português"
+    "a fim de simplificar a base e remover dados duplicados, foram criados 4 colunas referentes as notas de português e matemática do 1º e 2º ano"
    ]
   },
   {
