AC e supervisionado com dados filtrados

--- a/versao_2/modelo_supersionado_COM_social.ipynb
+++ b/versao_2/modelo_supersionado_COM_social.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "34219                      6                 720.0    PF  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#removendo colunas que explodem a quantidade de atributos quando binarizados ou nao tragam informacoes\n",
