--- a/PAPER_EXPERT_2.ipynb
+++ b/PAPER_EXPERT_2.ipynb
@@ -2506,6 +2506,200 @@
     },
     {
       "metadata": {
+        "id": "dhZZlIDoLqtY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 2822
+        },
+        "outputId": "80781269-418f-4c78-ad7e-d136fc03eecf"
+      },
+      "cell_type": "code",
+      "source": [
+        "sorted_under"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('conceito_I', 4),\n",
+              "             ('conceito_R', 4),\n",
+              "             ('conceito_O', 3),\n",
+              "             ('conceito_freq_R', 3),\n",
+              "             ('descricao_pai_escolaridade_Não conhece', 3),\n",
+              "             ('descricao_responsavel_financeiro_Irmão(ã)', 3),\n",
+              "             ('LnguaPortuguesaeLiteraturaI90H', 2),\n",
+              "             ('LnguaPortuguesaeLiteraturaI90H_freq', 2),\n",
+              "             ('MatemticaI120H', 2),\n",
+              "             ('MatemticaI120H_dependencia', 2),\n",
+              "             ('MatemticaI120H_freq', 2),\n",
+              "             ('acompanhamento', 2),\n",
+              "             ('artificial', 2),\n",
+              "             ('idade', 2),\n",
+              "             ('possui_necessidade_especial', 2),\n",
+              "             ('qnt_pc', 2),\n",
+              "             ('qnt_salarios', 2),\n",
+              "             ('qtd_pessoas_domicilio', 2),\n",
+              "             ('tempo_entre_conclusao_ingresso', 2),\n",
+              "             ('conceito_freq_I', 2),\n",
+              "             ('descricao_area_residencial_Comunidade Quilombola', 2),\n",
+              "             ('descricao_area_residencial_Não informado', 2),\n",
+              "             ('descricao_companhia_domiciliar_Não informado', 2),\n",
+              "             ('descricao_companhia_domiciliar_Outros', 2),\n",
+              "             ('descricao_companhia_domiciliar_Pai', 2),\n",
+              "             ('descricao_companhia_domiciliar_Parente(s) ou amigo(s)', 2),\n",
+              "             ('descricao_companhia_domiciliar_Sozinho(a)', 2),\n",
+              "             ('descricao_estado_civil_Divorciado(a)', 2),\n",
+              "             ('descricao_estado_civil_Não declarado', 2),\n",
+              "             ('descricao_estado_civil_União Estável', 2),\n",
+              "             ('descricao_historico_Técnico de Nivel Médio em Agropecuária, na Forma Integrada',\n",
+              "              2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Administração',\n",
+              "              2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Agroecologia', 2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Controle Ambiental',\n",
+              "              2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Eletromecânica',\n",
+              "              2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Eletrotécnica',\n",
+              "              2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Eletrônica', 2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Eventos', 2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Geologia', 2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Informática para Internet',\n",
+              "              2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Manutenção e Suporte em Informática',\n",
+              "              2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Meio Ambiente',\n",
+              "              2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Recursos Pesqueiros',\n",
+              "              2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Vestuário', 2),\n",
+              "             ('descricao_imovel_Cedido ou Emprestado', 2),\n",
+              "             ('descricao_mae_escolaridade_Ensino médio completo', 2),\n",
+              "             ('descricao_mae_escolaridade_Ensino superior incompleto', 2),\n",
+              "             ('descricao_mae_escolaridade_Não conhece', 2),\n",
+              "             ('descricao_mae_escolaridade_Não estudou', 2),\n",
+              "             ('descricao_mae_escolaridade_Pós graduação completo', 2),\n",
+              "             ('descricao_mae_escolaridade_Pós graduação incompleto', 2),\n",
+              "             ('descricao_pai_escolaridade_Ensino fundamental completo', 2),\n",
+              "             ('descricao_pai_escolaridade_Ensino médio completo', 2),\n",
+              "             ('descricao_pai_escolaridade_Ensino médio incompleto', 2),\n",
+              "             ('descricao_pai_escolaridade_Ensino superior completo', 2),\n",
+              "             ('descricao_pai_escolaridade_Ensino superior incompleto', 2),\n",
+              "             ('descricao_pai_escolaridade_Não estudou', 2),\n",
+              "             ('descricao_pai_escolaridade_Pós graduação completo', 2),\n",
+              "             ('descricao_pai_escolaridade_Pós graduação incompleto', 2),\n",
+              "             ('descricao_raca_Indígena', 2),\n",
+              "             ('descricao_raca_Não declarado', 2),\n",
+              "             ('descricao_responsavel_escolaridade_Ensino fundamental completo',\n",
+              "              2),\n",
+              "             ('descricao_responsavel_escolaridade_Ensino médio incompleto', 2),\n",
+              "             ('descricao_responsavel_escolaridade_Ensino superior incompleto',\n",
+              "              2),\n",
+              "             ('descricao_responsavel_escolaridade_Não conhece', 2),\n",
+              "             ('descricao_responsavel_escolaridade_Não estudou', 2),\n",
+              "             ('descricao_responsavel_escolaridade_Pós graduação completo', 2),\n",
+              "             ('descricao_responsavel_escolaridade_Pós graduação incompleto',\n",
+              "              2),\n",
+              "             ('descricao_responsavel_financeiro_Cônjuge', 2),\n",
+              "             ('descricao_responsavel_financeiro_Não informado', 2),\n",
+              "             ('descricao_responsavel_financeiro_O próprio aluno', 2),\n",
+              "             ('descricao_responsavel_financeiro_Pai', 2),\n",
+              "             ('descricao_responsavel_financeiro_Parentes', 2),\n",
+              "             ('descricao_responsavel_financeiro_Tio(a)', 2),\n",
+              "             ('descricao_trabalho_Autônomo', 2),\n",
+              "             ('descricao_trabalho_Beneficiário ou Pensionista do INSS', 2),\n",
+              "             ('descricao_trabalho_Empresa privada', 2),\n",
+              "             ('descricao_trabalho_Estágio ou bolsa', 2),\n",
+              "             ('descricao_trabalho_Não informado', 2),\n",
+              "             ('descricao_trabalho_Pescador', 2),\n",
+              "             ('descricao_trabalho_Serviço público', 2),\n",
+              "             ('sigla_CA', 2),\n",
+              "             ('sigla_CAL', 2),\n",
+              "             ('sigla_IP', 2),\n",
+              "             ('sigla_JC', 2),\n",
+              "             ('sigla_LAJ', 2),\n",
+              "             ('sigla_MC', 2),\n",
+              "             ('sigla_PAAS', 2),\n",
+              "             ('sigla_PAR', 2),\n",
+              "             ('sigla_PF', 2),\n",
+              "             ('sigla_SC', 2),\n",
+              "             ('sigla_SGA', 2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Edificações', 2),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Mecatrônica', 2),\n",
+              "             ('LnguaPortuguesaeLiteraturaI90H_dependencia', 1),\n",
+              "             ('aluno_exclusivo_rede_publica', 1),\n",
+              "             ('conceito_S', 1),\n",
+              "             ('conceito_freq_S', 1),\n",
+              "             ('descricao_area_residencial_Rural', 1),\n",
+              "             ('descricao_area_residencial_Urbana', 1),\n",
+              "             ('descricao_companhia_domiciliar_Mãe', 1),\n",
+              "             ('descricao_companhia_domiciliar_Pais', 1),\n",
+              "             ('descricao_estado_civil_Solteiro(a)', 1),\n",
+              "             ('descricao_historico_Técnico de Nivel Médio em Informática', 1),\n",
+              "             ('descricao_mae_escolaridade_Ensino fundamental incompleto', 1),\n",
+              "             ('descricao_pai_escolaridade_Ensino fundamental incompleto', 1),\n",
+              "             ('descricao_raca_Branca', 1),\n",
+              "             ('descricao_raca_Parda', 1),\n",
+              "             ('descricao_raca_Preta', 1),\n",
+              "             ('descricao_responsavel_escolaridade_Ensino fundamental incompleto',\n",
+              "              1),\n",
+              "             ('descricao_responsavel_escolaridade_Ensino médio completo', 1),\n",
+              "             ('descricao_responsavel_financeiro_Mãe', 1),\n",
+              "             ('descricao_trabalho_Nunca trabalhou', 1),\n",
+              "             ('sigla_CNAT', 1),\n",
+              "             ('descricao_historico_Técnico de Nivel Médio em Biocombustíveis',\n",
+              "              1),\n",
+              "             ('descricao_historico_Técnico de Nivel Médio em Equipamentos Biomédicos',\n",
+              "              1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Alimentos', 1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Apicultura', 1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Comércio', 1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Informática', 1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Lazer', 1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Logística', 1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Mecânica', 1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Mineração', 1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Multimídia', 1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Química', 1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Química, na Forma Integrado',\n",
+              "              1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Refrigeração e Climatização',\n",
+              "              1),\n",
+              "             ('descricao_historico_Técnico de Nível Médio em Têxtil', 1),\n",
+              "             ('descricao_historico_Técnico em Programação de Jogos Digitais',\n",
+              "              1),\n",
+              "             ('descricao_imovel_Financiado', 1),\n",
+              "             ('descricao_imovel_Não informado', 1),\n",
+              "             ('descricao_imovel_Outro', 1),\n",
+              "             ('descricao_imovel_Pensionato ou Alojamento', 1),\n",
+              "             ('descricao_mae_escolaridade_Ensino fundamental completo', 1),\n",
+              "             ('descricao_mae_escolaridade_Ensino médio incompleto', 1),\n",
+              "             ('descricao_mae_escolaridade_Ensino superior completo', 1),\n",
+              "             ('descricao_responsavel_financeiro_Outros', 1),\n",
+              "             ('descricao_trabalho_Trabalha com vínculo empregatício', 1),\n",
+              "             ('descricao_trabalho_Trabalhador rural/Agricultor', 1),\n",
+              "             ('sigla_CANG', 1),\n",
+              "             ('sigla_CM', 1),\n",
+              "             ('sigla_CN', 1),\n",
+              "             ('sigla_MO', 1),\n",
+              "             ('sigla_NC', 1),\n",
+              "             ('sigla_SPP', 1),\n",
+              "             ('sigla_ZN', 1)])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "Agd_M2anbZ4k",
         "colab_type": "code",
         "colab": {}
